# MedHub

./: .gitignore  CMakeLists.txt  availability-1.csv  doctors-1.csv  main.cpp  resources.qrc
Individuals/: Doctor.cpp  Doctor.h  Patient.cpp  Patient.h  Person.cpp  Person.h
Logic/: Appointment.cpp  Appointment.h  AvailabilitySlot.cpp  AvailabilitySlot.h  DataManager.cpp  DataManager.h  HospitalSystem.cpp  HospitalSystem.cpp.autosave  HospitalSystem.h
QtLogic/: appointmentbookingdialog.cpp  appointmentbookingdialog.h  appointmentbookingdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  patientlogdialog.cpp  patientlogdialog.h  patientlogdialog.ui  patientregistrationdialog.cpp  patientregistrationdialog.h  patientregistrationdialog.ui  timetablewidget.cpp  timetablewidget.h  timetablewidget.ui
